--- a/Adaptive Weather/Base.lproj/Main.storyboard
+++ b/Adaptive Weather/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_0" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,18 +18,18 @@
                         <viewControllerLayoutGuide type="bottom" id="pGZ-Fn-Zpw"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud_small" translatesAutoresizingMaskIntoConstraints="NO" id="Na9-2T-LdJ">
-                                <rect key="frame" x="10" y="20" width="300" height="227"/>
+                                <rect key="frame" x="20" y="62" width="255.5" height="196.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yb0-h6-ixF" userLabel="TextContainer">
-                                <rect key="frame" x="0.0" y="267" width="320" height="301"/>
+                                <rect key="frame" x="285.5" y="0.0" width="284" height="320"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bothell" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="YwR-Ey-i8q">
-                                        <rect key="frame" x="0.0" y="10" width="320" height="84"/>
+                                        <rect key="frame" x="0.0" y="10" width="284" height="84"/>
                                         <fontDescription key="fontDescription" type="system" weight="thin" pointSize="150"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -38,7 +38,7 @@
                                         </variation>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" text="13C" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="TFv-Kb-AFR">
-                                        <rect key="frame" x="0.0" y="131" width="320" height="180"/>
+                                        <rect key="frame" x="0.0" y="150" width="284" height="180"/>
                                         <fontDescription key="fontDescription" type="system" weight="thin" pointSize="250"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -60,15 +60,61 @@
                         </subviews>
                         <color key="backgroundColor" red="0.29019607843137252" green="0.6705882352941176" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="Na9-2T-LdJ" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.45" id="59p-Dh-dz2"/>
                             <constraint firstItem="Yb0-h6-ixF" firstAttribute="top" secondItem="Na9-2T-LdJ" secondAttribute="bottom" constant="20" id="8XS-dE-8Y2"/>
                             <constraint firstAttribute="trailing" secondItem="Yb0-h6-ixF" secondAttribute="trailing" id="BPK-cP-UFy"/>
+                            <constraint firstItem="Yb0-h6-ixF" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.5" id="Gk8-jD-wTM"/>
                             <constraint firstItem="Yb0-h6-ixF" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="Q4C-ro-Bki"/>
+                            <constraint firstItem="Yb0-h6-ixF" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" id="Rkn-2o-tYj"/>
                             <constraint firstItem="Yb0-h6-ixF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Swb-io-CDr"/>
+                            <constraint firstItem="Yb0-h6-ixF" firstAttribute="top" secondItem="ptW-i6-bK7" secondAttribute="bottom" id="USi-LV-LkJ"/>
+                            <constraint firstItem="Yb0-h6-ixF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="255.5" id="aS0-sO-VRw"/>
                             <constraint firstItem="Yb0-h6-ixF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="cCL-0P-yId"/>
                             <constraint firstItem="Na9-2T-LdJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cHL-0j-rFg"/>
+                            <constraint firstItem="Yb0-h6-ixF" firstAttribute="leading" secondItem="Na9-2T-LdJ" secondAttribute="trailing" constant="10" id="es3-zz-nC5"/>
+                            <constraint firstItem="Na9-2T-LdJ" firstAttribute="trailing" secondItem="Yb0-h6-ixF" secondAttribute="leading" constant="10" id="euC-Tp-QPA"/>
                             <constraint firstItem="Na9-2T-LdJ" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.4" id="nLs-D2-Rkc"/>
+                            <constraint firstItem="Na9-2T-LdJ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="oM6-C9-Riw"/>
+                            <constraint firstItem="Na9-2T-LdJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="pgg-mx-BKa"/>
+                            <constraint firstItem="Yb0-h6-ixF" firstAttribute="top" secondItem="ptW-i6-bK7" secondAttribute="bottom" id="vCa-ad-UAh"/>
                             <constraint firstItem="Na9-2T-LdJ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="wfJ-Zj-yxl"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="59p-Dh-dz2"/>
+                                <exclude reference="euC-Tp-QPA"/>
+                                <exclude reference="oM6-C9-Riw"/>
+                                <exclude reference="pgg-mx-BKa"/>
+                                <exclude reference="Gk8-jD-wTM"/>
+                                <exclude reference="Rkn-2o-tYj"/>
+                                <exclude reference="USi-LV-LkJ"/>
+                                <exclude reference="aS0-sO-VRw"/>
+                                <exclude reference="es3-zz-nC5"/>
+                                <exclude reference="vCa-ad-UAh"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="constraints">
+                                <include reference="59p-Dh-dz2"/>
+                                <exclude reference="cHL-0j-rFg"/>
+                                <exclude reference="euC-Tp-QPA"/>
+                                <exclude reference="nLs-D2-Rkc"/>
+                                <include reference="oM6-C9-Riw"/>
+                                <include reference="pgg-mx-BKa"/>
+                                <exclude reference="wfJ-Zj-yxl"/>
+                                <exclude reference="8XS-dE-8Y2"/>
+                                <exclude reference="BPK-cP-UFy"/>
+                                <include reference="Gk8-jD-wTM"/>
+                                <exclude reference="Q4C-ro-Bki"/>
+                                <include reference="Rkn-2o-tYj"/>
+                                <exclude reference="Swb-io-CDr"/>
+                                <exclude reference="USi-LV-LkJ"/>
+                                <exclude reference="aS0-sO-VRw"/>
+                                <exclude reference="cCL-0P-yId"/>
+                                <include reference="es3-zz-nC5"/>
+                                <include reference="vCa-ad-UAh"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -77,6 +123,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="cloud_small" width="300" height="196"/>
+        <image name="cloud_small" width="300" height="196.5"/>
     </resources>
 </document>
