--- a/Adaptive Weather/Base.lproj/Main.storyboard
+++ b/Adaptive Weather/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_0" orientation="landscape" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
@@ -16,19 +16,18 @@
                         <viewControllerLayoutGuide type="bottom" id="pGZ-Fn-Zpw"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud_small" translatesAutoresizingMaskIntoConstraints="NO" id="Na9-2T-LdJ">
-                                <rect key="frame" x="20" y="62" width="255.5" height="196.5"/>
+                                <rect key="frame" x="10" y="20" width="300" height="227"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yb0-h6-ixF" userLabel="TextContainer">
-                                <rect key="frame" x="284" y="0.0" width="284" height="320"/>
+                                <rect key="frame" x="0.0" y="267" width="320" height="301"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Bothell" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="YwR-Ey-i8q">
-                                        <rect key="frame" x="0.0" y="10" width="284" height="107.5"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bothell" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="YwR-Ey-i8q">
+                                        <rect key="frame" x="0.0" y="10" width="320" height="107.5"/>
                                         <fontDescription key="fontDescription" type="system" weight="thin" pointSize="150"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -36,9 +35,8 @@
                                             <fontDescription key="fontDescription" type="system" weight="thin" pointSize="90"/>
                                         </variation>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" text="13C" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="TFv-Kb-AFR">
-                                        <rect key="frame" x="0.0" y="150" width="284" height="180"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" text="13C" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="TFv-Kb-AFR">
+                                        <rect key="frame" x="0.0" y="131" width="320" height="180"/>
                                         <fontDescription key="fontDescription" type="system" weight="thin" pointSize="250"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -48,18 +46,29 @@
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" red="0.21568627450980393" green="0.50196078431372548" blue="0.72941176470588232" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="TFv-Kb-AFR" firstAttribute="bottom" secondItem="Yb0-h6-ixF" secondAttribute="bottom" constant="10" id="Jjo-0q-tTU"/>
+                                    <constraint firstItem="YwR-Ey-i8q" firstAttribute="width" secondItem="Yb0-h6-ixF" secondAttribute="width" id="O32-Ll-LoA"/>
+                                    <constraint firstItem="YwR-Ey-i8q" firstAttribute="centerX" secondItem="Yb0-h6-ixF" secondAttribute="centerX" id="fw6-iU-EY1"/>
+                                    <constraint firstItem="TFv-Kb-AFR" firstAttribute="centerX" secondItem="Yb0-h6-ixF" secondAttribute="centerX" id="k7a-0A-TDy"/>
+                                    <constraint firstItem="TFv-Kb-AFR" firstAttribute="width" secondItem="Yb0-h6-ixF" secondAttribute="width" id="ohi-uM-3QJ"/>
+                                    <constraint firstItem="YwR-Ey-i8q" firstAttribute="top" secondItem="Yb0-h6-ixF" secondAttribute="top" constant="10" id="pwe-f1-Wrc"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.29019607843137252" green="0.6705882352941176" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Na9-2T-LdJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="0kB-gw-suk"/>
+                            <constraint firstItem="Na9-2T-LdJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="0kB-gw-suk"/>
+                            <constraint firstItem="Yb0-h6-ixF" firstAttribute="top" secondItem="Na9-2T-LdJ" secondAttribute="bottom" constant="20" id="8XS-dE-8Y2"/>
+                            <constraint firstAttribute="trailing" secondItem="Yb0-h6-ixF" secondAttribute="trailing" id="BPK-cP-UFy"/>
+                            <constraint firstItem="Yb0-h6-ixF" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="DsF-ax-Ujz"/>
+                            <constraint firstItem="Yb0-h6-ixF" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="Q4C-ro-Bki"/>
+                            <constraint firstItem="Yb0-h6-ixF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Swb-io-CDr"/>
+                            <constraint firstItem="Yb0-h6-ixF" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.5" id="UEH-Pi-fTa"/>
+                            <constraint firstItem="Yb0-h6-ixF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="cCL-0P-yId"/>
                             <constraint firstItem="Na9-2T-LdJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cHL-0j-rFg"/>
                             <constraint firstItem="Na9-2T-LdJ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="cjU-1W-fta"/>
-                            <constraint firstItem="Yb0-h6-ixF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="284" id="eQA-5T-J5S"/>
                             <constraint firstItem="Na9-2T-LdJ" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.4" id="nLs-D2-Rkc"/>
-                            <constraint firstItem="Yb0-h6-ixF" firstAttribute="centerY" secondItem="Na9-2T-LdJ" secondAttribute="centerY" id="o6w-fy-kKX"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Yb0-h6-ixF" secondAttribute="trailing" constant="-20" id="oaC-0C-zcV"/>
-                            <constraint firstItem="Yb0-h6-ixF" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="qBD-pu-s1e"/>
                             <constraint firstItem="Na9-2T-LdJ" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.45" id="rZa-A1-LvO"/>
                             <constraint firstItem="Na9-2T-LdJ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="wfJ-Zj-yxl"/>
                         </constraints>
@@ -68,6 +77,8 @@
                                 <exclude reference="0kB-gw-suk"/>
                                 <exclude reference="cjU-1W-fta"/>
                                 <exclude reference="rZa-A1-LvO"/>
+                                <exclude reference="DsF-ax-Ujz"/>
+                                <exclude reference="UEH-Pi-fTa"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=compact">
@@ -78,6 +89,10 @@
                                 <exclude reference="nLs-D2-Rkc"/>
                                 <include reference="rZa-A1-LvO"/>
                                 <exclude reference="wfJ-Zj-yxl"/>
+                                <exclude reference="8XS-dE-8Y2"/>
+                                <include reference="DsF-ax-Ujz"/>
+                                <include reference="UEH-Pi-fTa"/>
+                                <exclude reference="cCL-0P-yId"/>
                             </mask>
                         </variation>
                     </view>
